--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.h2.console.enabled=true
 #spring.jpa.show-sql=true
-#
-#
-## Custom H2 Console URL
+
+
+# Custom H2 Console URL
 #spring.h2.console.path=/h2
